@startuml Proyecto
skinparam style strictuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

title Diagrama de Arquitectura de Tres Capas - Gestor PDF

package "Capa 1: Modelos (app/models/)" {
    class BaseEntity {
        + id: str
        + created_at: datetime
        + updated_at: datetime
        + update_timestamp()
    }

    class DocumentoPDF {
        + nombre_pdf: str
        + contenido_pdf: str
        + checksum: str
        + __init__(nombre_pdf, contenido_pdf, checksum, **kwargs)
    }

    DocumentoPDF -up-|> BaseEntity : Hereda de
}

package "Capa Core / Base de Datos (app/core/)" {
    interface Repository<T> {
        + add(entity: T): T
        + get_by_id(entity_id: str): T | None
        + get_all(): list[T]
        + update(entity: T): T
        + delete(entity_id: str): bool
        + find_one(filters: dict): T | None
    }

    class MongoRepository<T> {
        - collection: AsyncIOMotorCollection
        - entity_class: type[T]
        + __init__(db, collection_name, entity_class)
        + add(entity: T): T
        + get_by_id(entity_id: str): T | None
        + get_all(): list[T]
        + update(entity: T): T
        + delete(entity_id: str): bool
        + find_one(filters: dict): T | None
        - _to_document(entity: T): dict
        - _to_entity(document: dict): T
    }

    class InMemoryRepository<T> {
        - _data: dict[str, T]
        + add / get_by_id / get_all / update / delete / find_one
    }

    MongoRepository -up-|> Repository : Implementa
    InMemoryRepository -up-|> Repository : Implementa (doble de test)
}

package "Capa 2: Servicios (app/services/)" {
    class BaseService<T> {
        - _repository: Repository<T>
        + __init__(repository: Repository<T>)
        + create(entity: T): T
        + get_by_id(entity_id: str): T | None
        + get_all(): list[T]
        + update(entity: T): T
        + delete(entity_id: str): bool
    }

    class PdfService {
        + __init__(repository: Repository<DocumentoPDF>)
        + procesar_y_guardar(file: UploadFile): DocumentoPDF
        + renombrar(pdf_id: str, nuevo_nombre: str): DocumentoPDF
        - _validar_tamano(contenido_bytes: bytes)
        - _validar_no_duplicado(checksum: str)
        - _extraer_texto(contenido_bytes: bytes): str
    }

    PdfService -up-|> BaseService : Hereda de
}

package "Capa 3: Controladores (app/controllers/)" {
    class "pdf_routes" as PDFRoutes << (M, #FF7700) Module >> {
        + get_pdf_service(db): PdfService
        + registrar_pdf(file: UploadFile)
        + listar_pdfs()
        + obtener_pdf(pdf_id: str)
        + actualizar_pdf(pdf_id: str, datos: PDFUpdate)
        + borrar_pdf(pdf_id: str)
    }
}

' --- Relaciones y Flujo Unidireccional ---
PDFRoutes ..> PdfService : instancia e inyecta (get_pdf_service)
PDFRoutes ..> MongoRepository : instancia el adaptador concreto

BaseService o--> Repository : _repository (abstracción, DIP)
PdfService ..> DocumentoPDF : crea instancia

MongoRepository ..> DocumentoPDF : persiste en BD
@enduml
